# AutoMatResearch

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.py
config/: .env.example  settings.py  user_config.json
data/exports/: papers_export_20251029_235103.json
docs/: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USAGE_GUIDE.md
scripts/: setup.py
src/: __init__.py  main.py
src/cli/: cli.py
src/core/: analyzer.py  scheduler.py  scraper.py
src/data/: __init__.py  database.py  keyword_manager.py
src/utils/: config.py  logger.py  simple_query_generator.py  utils.py
src/web/: web_app.py
web/templates/: base.html  compare.html  compare_result.html  export.html  index.html  insights.html  keywords.html  keywords_simple.html  paper_detail.html  papers.html  settings.html
